# Diploma

./: .gitignore  CMakeLists.txt  README.md  draw.py  estimate.py  generation.py  generation.sage  main.c  pipeline.sh
db_dataset_preparation/: adj_to_graph6.py  edges_to_graph6.py  graph6_iso_dup.py  planar_generator.sh  srg-params-d36-d44.csv  srg_from_params.py  srg_parameters.csv
db_dataset_preparation/BoltzmannPlanarGraphs/: ListEdges.txt
generation_scripts/: random.sage  regular.sage  tree.sage
nauty2_8_9/: amtog  ancestorg  assembleg  catg  complg  config.status  converseg  copyg  countneg  cubhamg  dimacs2g  directg  dreadtestL  dreadtestL1  dreadtestQ  dreadtestS  dreadtestS1  dreadtestW1  edgetransg  genbg  genbgL  genquarticg  gentreeg  gtnautyL.lo  gtnautyL1.lo  gtnautyS.lo  gtnautyW.lo  gtnautyW1.lo  gtoolsL.lo  gtoolsS.lo  gutil1L.lo  gutil1L1.lo  gutil1Q.lo  gutil1S1.lo  gutil1W1.lo  gutil2L.lo  gutil2L1.lo  gutil2S.lo  gutil2W1.lo  labelg  (+57 more)
nauty2_8_9/.libs/: libnauty.dylib  libnauty.lai  libnauty1-2.8.9.dylib  libnautyL-2.8.9.dylib  libnautyL1-2.8.9.dylib  libnautyQ-2.8.9.dylib  libnautyQ.lai  libnautyQ1.dylib  libnautyS.lai  libnautyS1.dylib  libnautyS1.lai  libnautyW-2.8.9.dylib  libnautyW1.dylib  (+1 more)
pipeline_scripts/: random.sh  regular.sh  srg.sh  tree.sh
process_sources/: file_processor.c  file_processor.h  graph_processor.c  graph_processor.h  main.c  my_graph.c  my_graph.h  nauty_isomorphism.c  nauty_isomorphism.h  result_struct.h  tree_optimization.c  tree_optimization.h
project/: CMakeLists.txt  draw.py  generation.sage  main.c  pipeline.sh
(+1896 files in other folders)
